[tool.poetry]
name = "litemapy"
version = "0.1.0"
description = ""
authors = ["DemyCode <verycols@gmail.com>"]
readme = "README.md"
packages = [{include = "litemapy"}]

[tool.poetry.dependencies]
python = "^3.10"
nbtlib = "^1.12.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
mypy = "^1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
